# minic

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  SKILLS.md  clean.bat  install_gtest.bat  run.bat  test.bat
config/: import_catalog.txt
docs/: README.md  bug-fixes-2026-05-11.md  bug-fixes-2026-05-13.md  minic-relocation-matrix.md  pe-coff-linker-support.md  project-overview.md  project-progress.md  project-status-overview.md  testing-commands.md
docs/superpowers/plans/: 2026-04-27-minic-types-multifile-linker-plan.md  2026-04-28-bss-validation-progress.md  2026-04-30-file-backed-import-catalog-plan.md  2026-04-30-pe-base-relocation-support-plan.md  2026-04-30-remove-nasm-windows-coff-plan.md  2026-04-30-table-driven-import-resolver-plan.md
docs/superpowers/specs/: 2026-04-27-minic-types-multifile-linker-design.md  2026-04-28-global-pointer-initializer-relocations-design.md  2026-04-28-pe-coff-linker-teaching-design.md  2026-04-30-file-backed-import-catalog-design.md  2026-04-30-pe-base-relocation-support-design.md  2026-04-30-remove-nasm-windows-coff-design.md  2026-04-30-table-driven-import-resolver-design.md
input/: answer.c  test_callee_saved.asm  test_callee_saved.c  test_header.h  test_simple_args.asm  test_sr_licm.asm  test_sr_licm.c  test_sr_licm2.asm  test_sr_licm2.c  test_sr_only.asm  test_sr_only.c  test_wstring.h  tmp_alignof.c  tmp_anon_member.c  tmp_bad_arity.c  tmp_bad_void_var.c  tmp_basic_types.c  tmp_bitfield.c  tmp_bitwise.c  tmp_bool_normalize.c  tmp_bool_type.c  tmp_bss_global_array.c  tmp_bss_global_int.c  tmp_bss_integrity.c  tmp_cast.c  tmp_char_literal.c  tmp_char_type.c  tmp_comma.c  tmp_compound_assign.c  tmp_compound_literal.c  tmp_conditional.c  tmp_const.c  tmp_const_assign_err.c  tmp_const_fold.c  tmp_const_prop.c  tmp_cross_no_decl_main.c  tmp_data_rel32_helper.asm  tmp_data_rel32_main.c  tmp_dead_code.c  tmp_debug_ir2.c  (+156 more)
src/: Ast.h  CodeGenerator.cpp  CodeGenerator.h  Driver.cpp  Driver.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  PeLinker.cpp  PeLinker.h  Semantics.cpp  Semantics.h  Target.h  Token.cpp  Token.h  Toolchain.cpp  Toolchain.h  main.cpp
src/app/: Driver.cpp  Driver.h  main.cpp
src/backend/: CFG.h  CFGBuilder.cpp  CFGBuilder.h  CodeGenCall.cpp  CodeGenDwarf.cpp  CodeGenExpr.cpp  CodeGenInit.cpp  CodeGenStmt.cpp  CodeGenerator.cpp  CodeGenerator.h  CoffObjectWriter.cpp  CoffObjectWriter.h  ObjectFileModel.h  Optimizer.cpp  Optimizer.h  PassManager.cpp  PassManager.h  Target.h  WindowsObjectEmitter.cpp  WindowsObjectEmitter.h
src/backend/ir/: IRBasicBlock.h  IRCodeGenerator.cpp  IRCodeGenerator.h  IRFunction.h  IRInstruction.h  IRLowering.cpp  IRLowering.h  IRModule.h  IRPrinter.cpp  IRPrinter.h  IRType.h  IRValue.h  Liveness.cpp  Liveness.h  RegAlloc.cpp  RegAlloc.h  SSAConstructor.cpp  SSAConstructor.h
src/backend/ir/passes/: IRConstProp.cpp  IRConstProp.h  IRCopyProp.cpp  IRCopyProp.h  IRDeadCodeElim.cpp  IRDeadCodeElim.h  IRLICM.cpp  IRLICM.h  IRPassManager.cpp  IRPassManager.h  IRStrengthReduction.cpp  IRStrengthReduction.h
src/frontend/: Ast.h  AstAccept.cpp  Diagnostics.cpp  Diagnostics.h  ExprVisitor.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Preprocessor.cpp  Preprocessor.h  Semantics.cpp  Semantics.h  StmtVisitor.h  Token.cpp  Token.h
src/linker/: BuiltinElfLinkerBackend.cpp  BuiltinElfLinkerBackend.h  BuiltinPeCoffLinkerBackend.cpp  BuiltinPeCoffLinkerBackend.h  CoffArchive.cpp  CoffArchive.h  ElfLinker.cpp  ElfLinker.h  LinkerBackend.cpp  LinkerBackend.h  LinkerDriver.cpp  LinkerDriver.h  PeLinker.cpp  PeLinker.h  WslGccElfLinkerBackend.cpp  WslGccElfLinkerBackend.h  link_main.cpp
src/support/: AssemblerBackend.cpp  AssemblerBackend.h  ProcessUtils.cpp  ProcessUtils.h  Toolchain.cpp  Toolchain.h
tests/: lexer_unit_tests.cpp  minic_regression_tests.cpp  pe_reloc_probe.cpp  preprocessor_unit_tests.cpp  regression_test_utils.cpp  regression_test_utils.h  run_linker_regression_case.ps1  run_regression_case.ps1  semantics_unit_tests.cpp
tests/data/: import_catalog_bad_row.txt  import_catalog_duplicate_builtin.txt  import_catalog_duplicate_symbol.txt  import_catalog_with_comments.txt
